# FMI-Semester-6

./: .gitignore  README.md
8Puzzle/: CMakeLists.txt  main.cpp
8Puzzle/Headers/: CompareFunctorForAStar.h  CompareFunctorForBestFirst.h  Node.h  Solver.h  State.h
8Puzzle/Source/: CompareFunctorForAStar.cpp  CompareFunctorForBestFirst.cpp  Node.cpp  Solver.cpp  State.cpp
AI/8PuzzleAI/: CMakeLists.txt  main.cpp  Опасание на решението.odt
AI/8PuzzleAI/Source/: CompareFunctorForAStar.cpp  Node.cpp  State.cpp
check/homework2-fixed/45518-Yani Drenchev/45518 - ä«¼áΦ¡á αáí«Γá 2/: CMakeLists.txt  Readme.md  main.cpp
check/homework2-fixed/45518-Yani Drenchev/45518 - ä«¼áΦ¡á αáí«Γá 2/Headers/: Command.h  CommandCode.h  DataBase.h  Person.h  Registration.h  Vehicle.h
check/homework2-fixed/45518-Yani Drenchev/45518 - ä«¼áΦ¡á αáí«Γá 2/Source/: Command.cpp  DataBase.cpp  Person.cpp  Registration.cpp  Vehicle.cpp
check/homework2-fixed/45518-Yani Drenchev/45518 - ä«¼áΦ¡á αáí«Γá 2/Test/: CMakeLists.txt  tests_command.cpp  tests_dataBase.cpp  tests_person.cpp  tests_registration.cpp  tests_vehicle.cpp
check/homework2-fixed/45641-Viktor Nolev/45641-Homework-2/45641-Homework-2/: CMakeLists.txt  Data.txt  main.cpp
check/homework2-fixed/45641-Viktor Nolev/45641-Homework-2/45641-Homework-2/Headers/: CommandHandler.h  Person.h  PersonCollection.h  Registration.h  Vehicle.h  VehicleCollection.h
check/homework2-fixed/45641-Viktor Nolev/45641-Homework-2/45641-Homework-2/Sources/: CommandHandler.cpp  Person.cpp  PersonCollection.cpp  Registration.cpp  Vehicle.cpp  VehicleCollection.cpp
check/homework2-fixed/45641-Viktor Nolev/45641-Homework-2/45641-Homework-2/Tests/: PersonCollectionTests.cpp  VehicleCollectionTests.cpp
check/homework2-fixed/45769-Tsenko Tsenkov/Homework2/OOP/: CMakeLists.txt
check/homework2-fixed/45769-Tsenko Tsenkov/Homework2/OOP/include/: BinaryCommand.hpp  Command.hpp  Executor.hpp  Person.hpp  Registration.hpp  UnaryCommand.hpp  Vehicle.hpp
check/homework2-fixed/45769-Tsenko Tsenkov/Homework2/OOP/src/: BinaryCommand.cpp  (+6 more)
check/homework2-fixed/82142-Chudomir Chenkov/fn82142_oop_hw2/: CMakeLists.txt  README.md
check/homework2-fixed/82142-Chudomir Chenkov/fn82142_oop_hw2/apps/: CMakeLists.txt  app.cpp  main.cpp
check/homework2-fixed/82142-Chudomir Chenkov/fn82142_oop_hw2/include/: app.hpp  cmd.hpp  databasemanager.hpp  person.hpp  registration.hpp  utils.hpp  vehicle.hpp
check/homework2-fixed/82142-Chudomir Chenkov/fn82142_oop_hw2/src/: CMakeLists.txt  cmd.cpp  databasemanager.cpp  person.cpp  registration.cpp  utils.cpp  vehicle.cpp
check/homework2-fixed/82142-Chudomir Chenkov/fn82142_oop_hw2/tests/: CMakeLists.txt
check/homework2-fixed/82155-Plamen Dinev/homework2/homework2/: .clang-tidy  .cproject  CMakeLists.txt  homework2 Default.launch
check/homework2-fixed/82159-Yordan Yordanov/Homework2/: CMakeLists.txt  main.cpp
check/homework2-fixed/82159-Yordan Yordanov/Homework2/Headers/: CommandParser.h  Person.h  Registration.h  Vehicle.h
check/homework2-fixed/82159-Yordan Yordanov/Homework2/Sources/: CommandParser.cpp  Person.cpp  Registration.cpp  Vehicle.cpp
check/homework2-fixed/82159-Yordan Yordanov/Homework2/Tests/: main.cpp
check/homework2-fixed/82164-Ivan Stefanov/Homework_2/Homework/: CMakeLists.txt  main.cpp
check/homework2-fixed/82167-Vladimir Iliev/82167_Domashno_2/: CMakeLists.txt  info.txt  main.cpp
check/homework2-fixed/82167-Vladimir Iliev/82167_Domashno_2/Commands And Container/: Commands.cpp  Commands.h  Container.cpp  Container.h
check/homework2-fixed/82167-Vladimir Iliev/82167_Domashno_2/Person/: Person.cpp  Person.h
check/homework2-fixed/82167-Vladimir Iliev/82167_Domashno_2/Registration/: Registration.cpp  Registration.h
check/homework2-fixed/82167-Vladimir Iliev/82167_Domashno_2/Vehicle/: Vehicle.cpp  Vehicle.h
check/mine/ElectronicsTable/: CMakeLists.txt  Cell.cpp  Cell.h  CellTests.cpp  CellType.h  CommandParser.cpp  CommandParser.h  CommandParserTests.cpp  CommandType.h  DocumentHandler.cpp  DocumentHandler.h  DocumentHandlerTests.cpp  DoubleType.cpp  DoubleType.h  DoubleTypeTests.cpp  FormulaType.cpp  FormulaType.h  FormulaTypeTests.cpp  IntegerType.cpp  IntegerType.h  IntegerTypeTests.cpp  Pair.h  REMARKS.txt  StringHelper.cpp  StringHelper.h  StringHelperTests.cpp  StringType.cpp  StringType.h  StringTypeTests.cpp  Table.cpp  Table.h  Table.vcxproj  TableTests.cpp  catch2.hpp  main.cpp  termcolor.hpp
check/mine/done/45796-Tsvetan Petrov/: CMakeLists.txt  Instruction.cpp  Instruction.h  Person.cpp  Person_Tests.cpp  Registration.cpp  Registration_Header.h  Registration_Tests.cpp  Source.cpp  Vehicle.cpp
check/mine/done/45799/: CMakeLists.txt  Component.cpp  Component.h  Configuration.cpp  Configuration.h  Cpu.cpp  Cpu.h  Memory.cpp  Memory.h  Utils.cpp  main.cpp
check/mine/done/81977-Жени Каракашева_1450245_assignsubmission_file_/homework1_81977/: CMakeLists.txt  main.cpp
check/mine/done/82012-Мария Маркова_1450372_assignsubmission_file_/hom/: CMakeLists.txt
check/mine/done/82037-Йоанна Сиркова_1450162_assignsubmission_file_/exm/: CMakeLists.txt  Garage.cpp  MyString.cpp  MyStringTest.h  Vehicle.cpp  main.cpp  main_Homework.cpp
check/mine/done/82138-Ralitsa Andreeva/: CMakeLists.txt
check/mine/done/82138-Ralitsa Andreeva/hw2/: Command.cpp  CommandTests.hpp  Database.cpp  Database.h  DatabaseTests.hpp  Helpers.cpp  Helpers.h  Person.cpp  RegistrationTests.hpp  TestsHW2.vcxproj  Vehicle.cpp  VehicleTests.hpp  input.txt
check/mine/done/82211-Ангел Петров_1450255_assignsubmission_file_/oop-hw1/: CMakeLists.txt  garage.cpp  garage.h  garage_test.cpp  main.cpp  myString.h  mystring.cpp  mystring_test.cpp  utils.cpp  utils.h  vehicle.cpp  vehicle.h  vehicleAllocator.cpp  vehicleAllocator.h  vehicleAllocator_test.cpp  vehicle_test.cpp
playground/Shapes/: CMakeLists.txt  main.cpp
playground/Shapes/Shapes/: Rectangle.cpp  Rectangle.h  ShapesContainer.h  Square.h
playground/Shapes/Shapes/Triangles/: EquilateralTriangle.h  Triangle.h
playground/Shapes/Utilities/: Point.hpp  ShapeFactory.hpp
(+2023 files in other folders)
